--- a/FrontEnd/main_page.css
+++ b/FrontEnd/main_page.css
@@ -1,5 +1,5 @@
-h6 {
+h4 {
     text-align: 'center';
-    background-color: #026393;
-    color: white;
+    background-color: #3baee7;
+    color: black;
 }
