--- a/FrontEnd/main_page.css
+++ b/FrontEnd/main_page.css
@@ -1,6 +1,36 @@
-.banner banner-img{
-    width: 100%;
-    height: 80px;
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.banner{
+    display: flex;
+    background-color: #969696;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    position: relative;
+}
+
+.banner img{
+    width: 75%;
+    height: 350px;
+    opacity: 80%;
+    object-fit: cover;
+}
+
+.banner-text{
+    position: absolute;
+    color: #ffffff;
+    font-size: 100px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.main {
+    background-color: #faf7ef;
+    margin: 0;
 }
 
 .model {
@@ -10,16 +40,98 @@
 }
 
 .data th {
-    background-color: dimgray
+    background-color: rgb(128, 128, 128);
 }
 
 .data th, td {
-    border: 3px;
+    width: 140px;
+}
+
+.data table th:nth-of-type(1) {
+    width: 200px;
+}
+
+.data table, th, td {
+    border: 1px solid;
+    border-collapse: collapse;
+    align-content: center;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.stat-input {
+    border: 0px;
+    height: 20px;
+    width: 140px;
+}
+
+.prediction {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin: 25px;
+
+}
+
+hr {
+    height: 3px;
+    border: none;
+    background-color: black;
+    margin: 0;
 }
 
 footer {
     text-align: center;
-    background-color: #3baee7;
-    color: black;
+    background-color: #2c2c2c;
+    margin-top: 0px;
+    padding: 5px 0 25px;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.contact h1 {
+    color: #dcdcdc; /*Temp Color*/
+    font-size: 50px;
+
+    margin: 10px;
+}
+
+.contact p {
+    color: #dcdcdc; /*Temp Color*/
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+a {
+    color:#ffd700;
+    text-decoration: none;
+}
+
+a:visited {
+    color:#888888;
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
+.social-item {
+    color: black; /*Temp Color*/
+    align-items: center;
+    gap: 25px;
+    font-size: 16px;
+}
+
+.social-item img {
+    width: 20px;
+    height: 20px;
 }
